# starq

./: Dockerfile  Dockerfile.jetson  README.md  build_dev.sh  run_dev.sh  run_jetson.sh
docs/: 1_RunningSTARQ.md  1b_UtilCommands.md  1c_TestExecutables.md  2_DevContainer.md  3_DevCpp.md  3b_Classes.md  4_Hardware.md  4b_CanBus.md  commands.md  configure_odrive.py  cpp_notes.md  debug.txt  dev.md  hardware.md  loadcan_jetson.sh  quiz.md  robots.md  testing.md
starq/: CMakeLists.txt  package.xml
starq/config/: ekf.yaml  imu_cv7.yml
starq/examples/: example_control.cpp  two_leg_control.cpp
starq/gaits/: _format.txt  crawl.txt  stand.txt  walk.txt
starq/include/starq/: estop.hpp  leg_command_publisher.hpp  leg_controller.hpp  leg_dynamics.hpp  logger.hpp  motor_controller.hpp  operational_space_controller.hpp  robot.hpp  robot_dynamics.hpp  robot_parameters.hpp  system_localization.hpp  thread_runner.hpp  trajectory_controller.hpp  trajectory_file_reader.hpp  trajectory_publisher.hpp  types.hpp
starq/include/starq/can/: can_socket.hpp
starq/include/starq/dynamics/: leg_dynamics.hpp  starq_fivebar2d.hpp  unitree_a1_robot.hpp  unitree_rrr.hpp
starq/include/starq/mpc/: com_planner.hpp  foothold_planner.hpp  gait.hpp  gait_sequencer.hpp  mpc_configuration.hpp  mpc_controller.hpp  mpc_planner.hpp  mpc_problem.hpp  mpc_solver.hpp  mpc_types.hpp  qp_problem.hpp  qp_problem_condensed.hpp  qp_solver.hpp  reference_planner.hpp
starq/include/starq/mujoco/: mujoco.hpp  mujoco_camera.hpp  mujoco_control_function.hpp  mujoco_controller.hpp  mujoco_localization.hpp  mujoco_robot.hpp  mujoco_sim.hpp
starq/include/starq/odrive/: odrive_controller.hpp  odrive_socket.hpp
starq/include/starq/osqp/: osqp.hpp  osqp_solver.hpp
starq/include/starq/planning/: implicit_grid.hpp  planning_model.hpp  planning_solver.hpp  planning_types.hpp
starq/include/starq/robots/: unitree_a1_mujoco.hpp
starq/include/starq/ros2/: leg_command_publisher.hpp  leg_controller.hpp  motor_controller.hpp  mpc_configuration.hpp  odrive_controller.hpp  ros2_joystick.hpp  ros2_localization.hpp  ros2_mpc_joystick.hpp  ros2_mujoco_camera.hpp  ros2_util.hpp
starq/include/starq/slam/: localization.hpp  terrain_map.hpp
starq/include/starq/starq/: starq_fivebar2d_leg_dynamics.hpp  starq_planning_model.hpp  starq_robot.hpp  starq_robot_parameters.hpp
starq/include/starq/testing/: dummy_motor_controller.hpp  dummy_planning_model.hpp
starq/include/starq/unitree/: unitree_a1_leg_dynamics.hpp  unitree_a1_mujoco_robot.hpp  unitree_a1_robot_dynamics.hpp  unitree_a1_robot_parameters.hpp
starq/launch/: starq_launch.py  test_camera_mujoco.xml  test_joystick_mujoco.xml
starq/models/unitree_a1/: a1.xml  scene.xml
starq/msg/: Gait.msg  LegCommand.msg  LegState.msg  MotorCommand.msg  MotorState.msg  ODriveInfo.msg
starq/src/: estop.cpp  leg_command_publisher.cpp  leg_controller.cpp  logger.cpp  operational_space_controller.cpp  robot.cpp  starq_node.cpp  thread_runner.cpp  trajectory_controller.cpp  trajectory_file_reader.cpp  trajectory_publisher.cpp
starq/src/can/: can_socket.cpp
starq/src/lib/: leg_command_publisher.cpp  leg_controller.cpp  operational_space_controller.cpp  robot.cpp  trajectory_file_reader.cpp  trajectory_publisher.cpp
starq/src/lib/can/: can_socket.cpp
starq/src/lib/dynamics/: MUJOCO_LOG.TXT  starq_fivebar2d.cpp  unitree_a1_robot.cpp  unitree_rrr.cpp
starq/src/lib/mpc/: com_planner.cpp  foothold_planner.cpp  gait.cpp  gait_sequencer.cpp  mpc_configuration.cpp  mpc_controller.cpp  mpc_planner.cpp  mpc_problem.cpp  mpc_solver.cpp  qp_problem.cpp  qp_problem_condensed.cpp  reference_planner.cpp
starq/src/lib/mujoco/: mujoco.cpp  mujoco_camera.cpp  mujoco_controller.cpp  mujoco_localization.cpp  mujoco_robot.cpp  mujoco_sim.cpp
starq/src/lib/odrive/: odrive_controller.cpp  odrive_socket.cpp
starq/src/lib/osqp/: osqp.cpp  osqp_solver.cpp
starq/src/lib/robots/: unitree_a1_mujoco.cpp
starq/src/lib/ros2/: leg_command_publisher.cpp  leg_controller.cpp  motor_controller.cpp  odrive_controller.cpp  ros2_joystick.cpp  ros2_mujoco_camera.cpp
starq/src/lib/unitree/: unitree_a1_mujoco_robot.cpp  unitree_a1_robot_dynamics.cpp  unitree_a1_robot_parameters.cpp
starq/src/mpc/: gait.cpp  mpc_configuration.cpp  mpc_controller.cpp  mpc_problem.cpp  qp_problem.cpp  reference_planner.cpp
starq/src/mujoco/: mujoco.cpp  mujoco_camera.cpp  mujoco_controller.cpp  mujoco_robot.cpp
starq/src/odrive/: odrive_controller.cpp  odrive_socket.cpp
starq/src/planning/: implicit_grid.cpp  planning_solver.cpp
starq/src/ros2/: motor_controller.cpp  ros2_localization.cpp  ros2_mpc_joystick.cpp
starq/src/starq/: starq_fivebar2d_leg_dynamics.cpp  starq_planning_model.cpp  starq_robot.cpp  starq_robot_parameters.cpp
starq/src/unitree/: unitree_a1_leg_dynamics.cpp  unitree_a1_mujoco_robot.cpp  unitree_a1_robot_parameters.cpp
starq/tests/: test_can_connection.cpp  test_clear_errors.cpp  test_command_publisher_dummy.cpp  test_estop.cpp  test_fivebar2d_dummy.cpp  test_fivebar2d_force_control.cpp  test_fivebar2d_position_control.cpp  test_fivebar2d_two_leg_control.cpp  test_mujoco.cpp  test_mujoco_camera.cpp  test_mujoco_controller.cpp  test_mujoco_leg_control.cpp  test_mujoco_leg_forces.cpp  test_mujoco_leg_trajectory.cpp  test_mujoco_localization.cpp  test_mujoco_mpc_controller.cpp  test_mujoco_mpc_planner.cpp  test_mujoco_mpc_solver.cpp  test_mujoco_mpc_w_planning.cpp  test_odrive_control.cpp  test_planning_dummy.cpp  test_planning_starq.cpp  test_ros2_camera_mujoco.cpp  test_ros2_joystick_mujoco.cpp  test_ros2_mpc_joystick_mujoco.cpp  test_starq_motors.cpp  test_starq_robot.cpp  test_unitree_a1_mujoco_robot.cpp  test_zero_motors.cpp
starq/trajectories/: Jump3DP.txt  land.txt  land3DP.txt  square.txt  swim_forty.txt  swim_forty3DP.txt  swim_midup.txt  swim_midup3DP.txt  swim_zero.txt  swim_zero3DP.txt  trudge_test_1.txt  trudge_test_crawl.txt  walk_test.txt  walk_test_2.txt  walking.txt
starq/utils/: clear_errors.cpp  motor_info.cpp  run_trajectory.cpp  set_gains.cpp  zero_motors.cpp
(+32 files in other folders)
